# Best-Stock-Picker

./: README.md  pyproject.toml
output/: decision.md  research_report.json  trending_companies.json
src/best_stocks/: crew.py  main.py
src/best_stocks/config/: agents.yaml
