[project]
name = "best_stocks"
version = "0.1.0"
description = "best_stocks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]",
]

[project.scripts]
best_stocks = "best_stocks.main:run"
run_crew = "best_stocks.main:run"
train = "best_stocks.main:train"
replay = "best_stocks.main:replay"
test = "best_stocks.main:test"
run_with_trigger = "best_stocks.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
